# Project_EE

./: .env.example  .gitignore  AGENTS.md  END_TO_END_ESSAY.md  INTERVIEW_CHEATSHEET.md  README.html  README.md  architecture.html  architecture_diagram.html  download_test_pdfs.sh  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: export.py  extract.py  process.py
app/: globals.css  layout.tsx  page.tsx
assesment_info/: EarningsSample (1).xlsx
docs/: CLIENT_BRIEF.md  CLIENT_REPLY.md  DATA_INSPECTION.md  DECISIONS.md  EVAL_SPEC.md  LLM_VS_PIPELINE.md  PROCESS.md  PROJECT_MAP.md  REVIEW.md  REVIEW_WORKFLOW.md  SYSTEM_DESIGN_NOTES.md  VERIFY.md
earnings_extractor/: __init__.py  __main__.py  _eval_bridge.py  batch.py  capital_return.py  classify.py  cli.py  config.py  export.py  extractor.py  identity.py  ingest.py  line_item_selector.py  locate.py  normalize.py  pipeline.py  recorded.py  review.py  schema.py  validation.py  verifier.py
evaluation/: __init__.py  golden_metrics.py  golden_production.py  runner.py  scoring.py  tolerances.py
html/: llm_vs_pipeline.html  phase3_workflow.html  phase4_workflow.html  phase5_workflow.html  phase6_workflow.html  reliability_and_citations.html
scripts/: build_citation_viewer.py  compare_llm_vs_pipeline.py  demo_line_selector.py  holdout_eval.py  inspect_phase2_inputs.py  make_acceptance_decisions.py  record_cassette.py  score_production.py  update_project_map.py  web_api_server.py  web_lib.py
tests/: test_capital_return.py  test_classify.py  test_cli_phase3.py  (+14 more)
(+2 files in other folders)
